--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.1",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -40,7 +41,7 @@
     "react-markdown": "^4.2.2",
     "react-number-format": "^4.4.1",
     "react-quill": "^1.3.5",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.9",
     "react-resizable": "^1.11.0",
     "react-resize-detector": "^5.2.0",
     "react-router-dom": "^5.2.0",
